<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <TextView
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:text="@string/reply"
            android:id="@+id/bt_reply"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="@color/schoolName"
            android:textSize="16sp"
            android:visibility="gone"
            android:gravity="center_vertical|center_horizontal" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rll"
            android:layout_toStartOf="@+id/bt_reply"
            android:layout_toLeftOf="@+id/bt_reply">

            <TextView
                android:id="@+id/nick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/userName"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:layout_gravity="left|center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/time"
                android:text="@string/time"
                android:textSize="12sp" />

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_ok"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        android:maxLines="4"
        android:gravity="center_vertical"
        android:layout_gravity="left"
        android:id="@+id/tv_content_message"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bg"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/lineColor"
        android:layout_marginTop="8dp" />

</LinearLayout>