<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/accept"
            android:id="@+id/bt_reply"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/bt_custom"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_margin="8dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rll"
            android:layout_toStartOf="@+id/bt_reply"
            android:layout_toLeftOf="@+id/bt_reply">

            <TextView
                android:id="@+id/school_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/schoolName"
                android:textColor="@color/themeColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/nick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/userName"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:layout_marginLeft="8dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/addSchoolMate"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:layout_marginLeft="8dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/time"
                android:layout_marginLeft="8dp"
                android:text="2016-04-26"
                android:textSize="12sp" />

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/lineColor"
        android:layout_marginTop="8dp" />

</LinearLayout>