<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="userModel"
            type="com.yetland.myfriend.model.UserModel"></variable>
    </data>

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        tools:context=".view.activity.UserDetailActivity">

        <include
            layout="@layout/include_appbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <View
                        style="@style/custom_line"
                        android:background="@color/lineColor" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/user_info_text"
                            android:layout_gravity="center"
                            android:text="@string/nick" />

                        <TextView
                            style="@style/custom_editText"
                            android:gravity="center_vertical"
                            android:text="@{userModel.nick}" />
                    </LinearLayout>

                    <View
                        style="@style/custom_line"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:background="@color/lineColor" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/user_info_text"
                            android:text="@string/email" />

                        <TextView
                            style="@style/custom_editText"
                            android:gravity="center_vertical"
                            android:text="@{userModel.email}" />
                    </LinearLayout>

                    <View
                        style="@style/custom_line"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:background="@color/lineColor" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/user_info_text"
                            android:text="@string/sex" />

                        <TextView
                            style="@style/custom_editText"
                            android:gravity="center_vertical"
                            android:text="@{userModel.sex}" />

                    </LinearLayout>

                    <View
                        style="@style/custom_line"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:background="@color/lineColor" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:measureWithLargestChild="false"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/user_info_text"
                            android:text="@string/sign" />

                        <TextView
                            style="@style/custom_editText"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@{userModel.sign}"
                        android:textColor="@color/textColor"
                        android:textSize="16sp" />

                    <View
                        style="@style/custom_line"
                        android:background="@color/lineColor" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <View
                        style="@style/custom_line"
                        android:background="@color/lineColor" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/user_info_text"
                            android:text="@string/school_name" />

                        <TextView
                            style="@style/custom_editText"
                            android:gravity="center_vertical"
                            android:text="@{userModel.schoolName}" />
                    </LinearLayout>

                    <View
                        style="@style/custom_line"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:background="@color/lineColor" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/user_info_text"
                            android:text="@string/graduate_year" />

                        <TextView
                            style="@style/custom_editText"
                            android:gravity="center_vertical"
                            android:text="@{userModel.graduateYear}" />
                    </LinearLayout>

                    <View
                        style="@style/custom_line"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:background="@color/lineColor" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/user_info_text"
                            android:text="@string/class_name" />

                        <TextView
                            style="@style/custom_editText"
                            android:gravity="center_vertical"
                            android:text="@{userModel.className}" />
                    </LinearLayout>

                    <View
                        style="@style/custom_line"
                        android:background="@color/lineColor" />
                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <Button
                            android:id="@+id/bt_leave_message"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="8dp"
                            android:background="@drawable/bt_custom"
                            android:text="@string/messageBoard"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>